<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_doctor"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_visit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="#"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_doctor"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_doctor_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Terapevt"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_visit_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_visit_id" />

        <TextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Imya Familiya"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_visit_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_role" />

        <TextView
            android:id="@+id/lbl_patients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/patients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/lbl_reasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/reason"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_patients" />

        <TextView
            android:id="@+id/lbl_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/call_create_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_reasons" />

        <TextView
            android:id="@+id/lbl_visit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/visit_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_create_time" />

        <TextView
            android:id="@+id/tv_patients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_patients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_patients" />

        <TextView
            android:id="@+id/tv_reasons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_reasons"
            app:layout_constraintEnd_toEndOf="@+id/tv_patients"
            app:layout_constraintStart_toEndOf="@+id/lbl_reasons" />

        <TextView
            android:id="@+id/tv_create_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_create_time"
            app:layout_constraintEnd_toEndOf="@+id/tv_patients"
            app:layout_constraintStart_toEndOf="@+id/lbl_create_time" />

        <TextView
            android:id="@+id/tv_visit_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_visit_time"
            app:layout_constraintEnd_toEndOf="@+id/tv_patients"
            app:layout_constraintStart_toEndOf="@+id/lbl_visit_time" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_doctor,tv_visit_id,tv_doctor_role,tv_doctor_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
